@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST rack-openid-1.0.3.gem 7168 RMD160 6b26f2a7b680ac32e336efeaecec29e8cc9143aa SHA1 cc4ec84024e984c7ed9494d5ce5b0e9ba9152062 SHA256 d1c62d86c4ddeeb66fd34a9392846540c7b3e91bc40ad111fa77f436fe5f16e5
+DIST rack-openid-1.2.0.gem 7680 RMD160 c81e7bb1bd78c9eebc308ae2537143e76c825dc8 SHA1 b2b9d03bf50db2985a955c3be8e34725d95dcce8 SHA256 76a0980564f2e884a30aec545f91c4ceae175ba0bbec78f9425d7b7c85dfc514
 EBUILD rack-openid-1.0.3.ebuild 533 RMD160 286125093e0fb8bf74c98b892452e4f39ca8b843 SHA1 6f3dd898f16972caffc70ef82faf9747dd4dce80 SHA256 5baf0f76153c7c0888d3aed2eee9baa3847a29ef79e30241faa41763ede21979
-MISC ChangeLog 496 RMD160 023569b836abb3a49852defb6fdf60f3c966b6a8 SHA1 3b21e69f6fc7faf8ae9aa54ba65976953f65f2fa SHA256 dc7805cdb49c66dfea569f05441d4604cc4a422b49a4f61eaee15400c242a2ce
+EBUILD rack-openid-1.2.0.ebuild 604 RMD160 5edbf51dd3c9c37e18bac9eed9b0b6b159731052 SHA1 0cf36646af6d01ccc3143dcb078aaa0e790c77ff SHA256 775e12eac365bc4d17aadfcc128e44eb9e8fbb1740dfcdb4b49adc93014d7b5a
+MISC ChangeLog 624 RMD160 bd9178116744616750e91d803033d9b49fb7cfca SHA1 0228ef0ec20846a272aaee4c187ae9aae0f36f2b SHA256 4331e88f1344c60d58e38315a5679e93c6deace210df28cf6cd625910ebccd3f
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAk0+0EgACgkQrnu0mw69Jkp2nQD+N2GdYVr0ODG2DaSHqPW7f2QD
-Wg5QCSH64gRfOGt0lpoA/3ovgUD1nu54ApCe/AkkTOSHUYWH9QD6vCrFt5cWiJtq
-=3lIJ
+iF4EAREIAAYFAk0+0Z0ACgkQrnu0mw69JkoVLwEAgGycLDC31XSEQgBXjCipFSS6
+3vKJdjVaRl8rg63x6rIA/22Nc0cOtdR/KduKVCmglrranjrBRx916Icfodln161Q
+=RFZA
 -----END PGP SIGNATURE-----
