@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rack-openid-1.2.0 (25 Jan 2011)
+
+  25 Jan 2011; Hans de Graaff <graaff@gentoo.org> +rack-openid-1.2.0.ebuild:
+  Version bump.
+
   25 Jan 2011; Hans de Graaff <graaff@gentoo.org> -rack-openid-0.2.2.ebuild:
   Remove old version.
 
